# NativeParticleSystem

./: .gitignore  NativeParticleSystem_VS2015.sln  RenderingPlugin.cpp  RenderingPlugin_.cpp  UnityVS.NativeParticleSystem.CSharp.Editor.csproj  UnityVS.NativeParticleSystem.CSharp.csproj  UnityVS.NativeParticleSystem.sln  sysinfo.txt
NativePlugin/: CMakeLists.txt  build_vs2013.bat  build_vs2015.bat  config.h.in
NativePlugin/Include/: UnityPluginInterface.h
NativePlugin/Include/Configuration/: UnityConfigure.h
NativePlugin/Include/Precomplie/: PluginPrefix.h  PrefixConfigure.h  VisualStudioPrefix.h
NativePlugin/Project/Win/: DemoApp.vcxproj  DemoApp.vcxproj.filters  NativeParticleSystem.sln  NativeParticleSystem.vcxproj  NativeParticleSystem.vcxproj.filters  OpenGLESApp.vcxproj
NativePlugin/Project/Win/D3DApp/: CMakeLists.txt  MainApp.cpp
NativePlugin/Project/Win/DemoApp/: D3D9Enumeration.cpp  D3D9Enumeration.h  DemoApp.cpp
NativePlugin/Project/Win/OpenGLESApp/: CMakeLists.txt  MainApp.cpp  OpenGLESApp.cpp
NativePlugin/Src/: RenderingPlugin.cpp
NativePlugin/Src/Allocator/: MemoryMacros.h  MemoryManager.cpp  MemoryManager.h
NativePlugin/Src/GfxDevice/: BuiltinShaderParams.cpp  BuiltinShaderParams.h  ChannelAssigns.h  GfxBuffer.h  GfxDevice.cpp  GfxDevice.h  GfxDeviceTypes.h  TransformState.h  VertexDeclaration.cpp  VertexDeclaration.h
NativePlugin/Src/GfxDevice/d3d/: D3D9Context.cpp  D3D9Context.h  D3D9Enumeration.h  D3D9Includes.h  D3D9Utils.cpp  D3D9Utils.h  GfxDeviceD3D9.cpp  GfxDeviceD3D9.h  VertexDeclarationD3D9.cpp  VertexDeclarationD3D9.h
NativePlugin/Src/Graphics/: Renderer.h  Transform.h
NativePlugin/Src/Graphics/Mesh/: DynamicVBO.cpp  DynamicVBO.h  GenericDynamicVBO.h  MeshVertexFormat.cpp  MeshVertexFormat.h  ShaderChannels.h  SharedMeshData.h  VertexData.cpp  VertexData.h
NativePlugin/Src/Input/: TimeManager.cpp  TimeManager.h
NativePlugin/Src/Math/: AnimationCurve.cpp  AnimationCurve.h  Color.h  FloatConversion.h  Gradient.cpp  Gradient.h  Matrix3x3.cpp  Matrix4x4.cpp  Matrix4x4.h  Matrix4x4_REF.cpp  Polynomials.h  Quaternion.cpp  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
NativePlugin/Src/Math/Random/: rand.cpp
NativePlugin/Src/Mono/: NativeUtil.cpp  NativeUtil.h  ScriptingAPI.cpp  ScriptingAPI.h  ScriptingAPI_Mono.cpp  ScriptingTypes.h
NativePlugin/Src/ParticleSystem/: ColorModule.cpp  ColorModule.h  EmissionModule.cpp  EmissionModule.h  InitialModule.cpp  InitialModule.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemCommon.h  ParticleSystemCurves.h  ParticleSystemGradients.cpp  ParticleSystemModule.cpp  ParticleSystemModule.h  ParticleSystemParticle.cpp  ParticleSystemParticle.h  ParticleSystemParticles.cpp  ParticleSystemParticles.h  ParticleSystemRenderer.cpp  ParticleSystemRenderer.h  ParticleSystemUtils.cpp  ParticleSystemUtils.h  PolynomialCurve.cpp  RotationModule.cpp  RotationModule.h  ShapeModule.cpp  ShapeModule.h  SizeModule.cpp  SizeModule.h
NativePlugin/Src/PlatformDependent/Win/: WinSystemInfo.cpp
NativePlugin/Src/Runtime/Allocator/: AllocationHeader.h  BaseAllocator.cpp  BaseAllocator.h  BucketAllocator.cpp  BucketAllocator.h  DynamicHeapAllocator.cpp  DynamicHeapAllocator.h  LinearAllocator.h  LowLevelDefaultAllocator.cpp  LowLevelDefaultAllocator.h  MemoryMacros.h  MemoryManager.cpp  MemoryManager.h  STLAllocator.h  StackAllocator.cpp  StackAllocator.h  TLSAllocator.cpp  TLSAllocator.h  ThreadsafeLinearAllocator.cpp  ThreadsafeLinearAllocator.h  UnityDefaultAllocator.cpp  UnityDefaultAllocator.h
NativePlugin/Src/Runtime/GfxDevice/: BuiltinShaderParams.h  BuiltinShaderParamsNames.cpp  BuiltinShaderParamsNames.h  ChannelAssigns.cpp  ChannelAssigns.h  GeometryJob.cpp  GeometryJob.h  GfxBuffer.h  GfxDevice.cpp  GfxDevice.h  GfxDeviceConfigure.h  GfxDeviceResources.h  GfxDeviceTypes.h
NativePlugin/Src/Runtime/Input/: TimeManager.h
NativePlugin/Src/Runtime/Jobs/: BatchedForEach.h  BlockRangeJob.cpp  BlockRangeJob.h  BlockRangeJobTests.cpp  JobBatchDispatcher.cpp  JobBatchDispatcher.h  JobSet.cpp  JobSet.h  JobSystem.cpp  JobSystem.h  Jobs.cpp  Jobs.h  jobtypes.h
NativePlugin/Src/Runtime/Log/: Log.cpp  Log.h
NativePlugin/Src/Runtime/Math/: AnimationCurve.cpp  FloatConversion.h  Gradient.cpp  Matrix3x3.h  Quaternion.h  Rect.h  Vector4.h
NativePlugin/Src/Runtime/Misc/: AllocatorLabelNames.h  AllocatorLabels.cpp  AllocatorLabels.h  SystemInfo.cpp  SystemInfo.h
NativePlugin/Src/Runtime/ParticleSystem/: ColorModule.cpp  EmissionModule.h  InitialModule.cpp  InitialModule.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemCurves.cpp  ParticleSystemGeometryJob.cpp  ParticleSystemGeometryJob.h  ParticleSystemGradients.h  ParticleSystemModule.h  ParticleSystemParticles.cpp  ParticleSystemParticles.h  ParticleSystemRenderer.h  PolynomialCurve.h  RotationModule.h  SizeModule.h  UVModule.cpp  UVModule.h
NativePlugin/Src/Runtime/Shaders/: GraphicsCaps.h
NativePlugin/Src/Runtime/Threads/: AtomicNode.h  AtomicOps.h  AtomicQueue.cpp  AtomicQueue.h  AtomicRefCounter.h  CappedSemaphore.h  ConcurrentContainers.h  Event.h  ExtendedAtomicOps-arm.h  ExtendedAtomicOps-arm64.h  ExtendedAtomicOps-ppc.h  ExtendedAtomicOps-ppc64.h  ExtendedAtomicOps-webgl.h  ExtendedAtomicOps-x86-64.h  ExtendedAtomicOps-x86.h  ExtendedAtomicOps.h  ExtendedAtomicTypes.h  MultiWriterSingleReaderAtomicCircularBuffer.cpp  MultiWriterSingleReaderAtomicCircularBuffer.h  Mutex.cpp  Mutex.h  MutexLockedQueue.cpp  MutexLockedQueue.h  MutexLockedStack.cpp  MutexLockedStack.h  ProfilerMutex.h  ReadWriteLock.h  ReadWriteSpinLock.h  Semaphore.h  SimpleLock.h  TaskChainProcessor.h  TaskQueue.h  Thread.cpp  Thread.h  ThreadHelper.cpp  ThreadHelper.h  ThreadSharedObject.h  ThreadSpecificValue.cpp  ThreadSpecificValue.h  ThreadToCoreMappings.h  (+3 more)
NativePlugin/Src/Runtime/Utilities/: Annotations.h  ArrayUtility.h  BitUtility.h  EnumFlags.h  FileStripped.h  LinkedList.h  MemoryUtilities.cpp  MemoryUtilities.h  NonCopyable.h  (+11 more)
NativePlugin/Src/Shaders/: GraphicsCaps.cpp  GraphicsCaps.h
NativePlugin/Src/Utilities/: Utility.h  dynamic_array.h
(+100 files in other folders)
